--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>David Jose Ortiz</h1>
+        <h1 class='masthead-heading'>David Ortiz</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
