--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I have been a lifelong musician and case manager.  Development is super new to me. Excited for new possibilities.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was raised in Crystal City, TX.  I went to Texas State University.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Music, Art.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Game developer.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>San Antonio, TX.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Development is the ultimate form of comprehensive expression.</p>
     </section>
 
     <footer id="footer">
